refactor(ui): 重构UI组件和工具类代码结构
- 移除AbstractToolOptionRenderer中的无用布局常量LABEL_WIDTH和PANEL_PADDING
- 优化BlockOperationGroup中的投影逻辑，提取为独立的方法getProjectGhostBlocksCommand
- 添加@NotNull注解增强代码可读性和IDE检查支持
- 从Canvas类中移除废弃的鼠标滚轮处理方法handleMouseScroll
- 清理CanvasRenderer中的无用setter方法setViewportBounds
- 完全移除CustomTabBar相关类实现（CustomTabBar和CustomTabItem）
- 使用现代Java语法替换Collectors.toList()为Stream.toList()
- 优化SnapVisualStyle中的空值处理逻辑，使用Objects.requireNonNullElseGet方法
- 重构ViewToolsGroup构造函数参数，统一与其他组件保持一致的初始化方式
- 更新SnapEnhancer文档注释格式，添加段落标记并移除无用的getter方法
- 移除未使用的Path导入声明，优化代码整洁性